# tools_jvm_autodeps

./: BUILD  CODEOWNERS  CONTRIBUTORS  README.md  WORKSPACE  jadep.cast  maven_deps.yaml
.bazelci/: config.yaml
bazel/: BUILD.bazel  bazel.go  bazel_test.go
bazeldepsresolver/: BUILD.bazel  bazeldepsresolver.go  bazeldepsresolver_test.go
buildozer/: BUILD.bazel  buildozer.go  buildozer_test.go
cli/: BUILD.bazel  cli.go  cli_test.go
cmd/jadep/: BUILD.bazel  jadep.go
cmd/list_classes_in_jar/: BUILD.bazel  list_classes_in_jar.go
color/: BUILD.bazel  color.go
compat/: BUILD
dictresolver/: BUILD.bazel  dictresolver.go  dictresolver_test.go
filter/: BUILD.bazel  filter.go  filter_test.go
fsresolver/: BUILD.bazel  fsresolver.go  fsresolver_test.go
future/: BUILD.bazel  future.go
graphs/: BUILD.bazel  graphs.go
grpcloader/: BUILD  grpcloader.go  grpcloader_test.go  mockworkspace_test.go
jadep/: BUILD  CONTRIBUTING.md  README.md
jadep/bazel/: bazel.go  bazel_test.go
jadep/bazeldepsresolver/: BUILD.bazel  bazeldepsresolver.go
jadep/buildozer/: BUILD.bazel  buildozer.go
jadep/cli/: cli.go  cli_test.go
jadep/cmd/jadep/: BUILD.bazel  jadep.go
jadep/cmd/list_classes_in_jar/: list_classes_in_jar.go
jadep/compat/: BUILD  compat.go
jadep/dictresolver/: BUILD.bazel  dictresolver.go  dictresolver_test.go
jadep/filter/: BUILD.bazel  filter.go  filter_test.go
jadep/fsresolver/: BUILD.bazel  fsresolver.go  fsresolver_test.go
jadep/future/: BUILD.bazel
jadep/grpcloader/: BUILD  grpcloader.go  grpcloader_test.go
jadep/jadeplib/: BUILD.bazel  UserInteractionHandler.go  UserInteractionHandler_test.go
jadep/jadepmain/: BUILD.bazel
jadep/java/com/google/devtools/javatools/jade/pkgloader/: BUILD  BazelPackageLoaderFactory.java  GrpcLocalServer.java  Lib.java  Serializer.java
jadep/java/com/google/devtools/javatools/jade/pkgloader/messages_proto/: BUILD  messages.proto
jadep/java/com/google/devtools/javatools/jade/pkgloader/services_proto/: BUILD  services.proto
jadep/javatests/com/google/devtools/javatools/jade/pkgloader/: BUILD  SerializerTest.java
jadep/lang/java/parser/: BUILD.bazel  parser.go  parser_test.go
jadep/lang/java/parser/xrefs/: BUILD.bazel  xrefs.go  xrefs_test.go
jadep/list_classes_in_jar/: list_classes_in_jar.go
jadep/loadertest/: loadertest.go
jadep/pkgloading/: pkgloading.go  pkgloading_test.go
jadep/resolverutil/: BUILD.bazel  resolverutil.go
jadep/scripts/: pkgloader_server.sh~
jadep/sortingdepsranker/: BUILD.bazel  sortingdepsranker.go
jadep/vlog/: vlog.go
jadeplib/: BUILD.bazel  UserInteractionHandler.go  UserInteractionHandler_test.go  jadeplib.go  jadeplib_test.go
jadepmain/: BUILD.bazel  customization.go  jadepmain.go
java/com/google/devtools/javatools/jade/pkgloader/: BazelPackageLoaderFactory.java  GrpcLocalServer.java  Lib.java  OperatingSystem.java  PackageLoaderFactory.java  Serializer.java
java/com/google/devtools/javatools/jade/pkgloader/messages_proto/: BUILD  messages.proto
java/com/google/devtools/javatools/jade/pkgloader/services_proto/: BUILD  services.proto
javatests/com/google/devtools/javatools/jade/pkgloader/: BUILD  BazelPackageLoaderFactoryTest.java  LibTest.java  MockWorkspace.java  SerializerTest.java  Workspace.java
lang/java/parser/: BUILD.bazel  parser.go  parser_test.go
lang/java/parser/xrefs/: BUILD.bazel  xrefs.go  xrefs_test.go
lang/java/ruleconsts/: BUILD.bazel  ruleconsts.go  ruleconsts_test.go
list_classes_in_jar/: BUILD.bazel
listclassesinjar/: BUILD.bazel  listclassesinjar.go  listclassesinjar_test.go
loadertest/: BUILD.bazel  loadertest.go
pkgloaderfakes/: BUILD.bazel  pkgloaderfakes.go
pkgloading/: BUILD.bazel  pkgloading.go  pkgloading_test.go
resolverutil/: BUILD.bazel  resolverutil.go  resolverutil_test.go
scripts/: pkgloader_server.sh
sortingdepsranker/: BUILD.bazel  sortingdepsranker.go
vlog/: BUILD.bazel
