load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "UserInteractionHandler.go",
        "jadeplib.go",
    ],
    importpath = "github.com/bazelbuild/tools_jvm_autodeps/jadeplib",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel:go_default_library",
        "//compat:go_default_library",
        "//filter:go_default_library",
        "//future:go_default_library",
        "//pkgloading:go_default_library",
        "//vlog:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "UserInteractionHandler_test.go",
        "jadeplib_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//bazel:go_default_library",
        "//future:go_default_library",
        "//pkgloaderfakes:go_default_library",
        "//sortingdepsranker:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
    ],
)
