load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "customization.go",
        "jadepmain.go",
    ],
    importpath = "github.com/bazelbuild/tools_jvm_autodeps/jadepmain",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel:go_default_library",
        "//buildozer:go_default_library",
        "//cli:go_default_library",
        "//dictresolver:go_default_library",
        "//fsresolver:go_default_library",
        "//future:go_default_library",
        "//jadeplib:go_default_library",
        "//lang/java/ruleconsts:go_default_library",
        "//pkgloading:go_default_library",
        "//vlog:go_default_library",
    ],
)
