load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["listclassesinjar.go"],
    importpath = "github.com/bazelbuild/tools_jvm_autodeps/listclassesinjar",
    visibility = ["//visibility:public"],
    deps = ["//jadeplib:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["listclassesinjar_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//jadeplib:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)
