load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["pkgloaderfakes.go"],
    importpath = "github.com/bazelbuild/tools_jvm_autodeps/jadep/pkgloaderfakes",
    visibility = ["//visibility:public"],
    deps = ["//bazel:go_default_library"],
)
