load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["pkgloading.go"],
    importpath = "github.com/bazelbuild/tools_jvm_autodeps/pkgloading",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel:go_default_library",
        "//compat:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["pkgloading_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//bazel:go_default_library",
        "//loadertest:go_default_library",
        "//pkgloaderfakes:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)
