load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["sortingdepsranker.go"],
    importpath = "github.com/bazelbuild/tools_jvm_autodeps/sortingdepsranker",
    visibility = ["//visibility:public"],
    deps = ["//bazel:go_default_library"],
)
