load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["jadep.go"],
    importpath = "github.com/bazelbuild/tools_jvm_autodeps/jadep/cmd/jadep",
    visibility = ["//visibility:private"],
    deps = [
        "//bazeldepsresolver:go_default_library",
        "//cli:go_default_library",
        "//filter:go_default_library",
        "//grpcloader:go_default_library",
        "//jadeplib:go_default_library",
        "//jadepmain:go_default_library",
        "//pkgloading:go_default_library",
        "//sortingdepsranker:go_default_library",
    ],
)

go_binary(
    name = "jadep",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
