load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["buildozer.go"],
    importpath = "github.com/bazelbuild/tools_jvm_autodeps/jadep/buildozer",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel:go_default_library",
        "@com_github_bazelbuild_buildtools//edit:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["buildozer_test.go"],
    embed = [":go_default_library"],
    deps = ["//bazel:go_default_library"],
)
