load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["ruleconsts.go"],
    importpath = "github.com/bazelbuild/tools_jvm_autodeps/lang/java/ruleconsts",
    visibility = ["//visibility:public"],
    deps = ["//jadeplib:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["ruleconsts_test.go"],
    embed = [":go_default_library"],
)
